2008-03-07  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpserver/file.py:
	  Allow createProducerConsumerProxy to return a deferred.
	* flumotion/component/misc/httpserver/ratecontrol.py:
	  Document this.

2008-03-07  Johan Dahlin  <johan@gnome.org>

	* misc/clean-flumotion: 
	Add a horribly broken, but still pretty useful script to 
	clean up all flumotion temporary files in /tmp, when 
	starting from the manager from the wizard.
	
2008-03-06  Johan Dahlin  <johan@gnome.org>

	* data/glade/admin-wizard.glade:
	* data/glade/wizard.glade:
	Put the wizard buttons in the end, instead of separately.

2008-03-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py:
	Sets are not jellyable, so convert to list otherwise error
	does not show.

2008-03-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py:
	It actually changed name to input-selector not selector, but
	the plugin name is selector.
	Capsfilter was given an extra , between framerate and par.
	Properties are video-framerate and video-pixel-aspect-ratio
	not framerate and pixel-aspect-ratio.

2008-03-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py:
	switch element changed name to selector between 0.10.5 and
	0.10.6

2008-03-05  Johan Dahlin  <johan@gnome.org>

	* flumotion/manager/admin.py (AdminAvatar.perspective_cleanComponents): 
	Undeprecate, since there are no alternatives.

2008-03-05  Michael Smith <msmith@fluendo.com>

	* configure.ac:
	* misc/flumotion-verify-config.in:
	  Add a simple test script to check that a config file is valid.

2008-03-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/twisted/compat.py:
	Fix typo.

2008-03-05  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/server.py (IServable): Remove self argument from
	methods.
